feat: complete Task 5 with Pub/Sub-triggered discount notification to Inbox

--- a/LocationService/LocationService.csproj
+++ b/LocationService/LocationService.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.24.0" />
-    <PackageReference Include="Google.Protobuf" Version="3.31.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
