feat: edited all the Apis to be able to handle input from appsettings

--- a/CabBookingWebApp/appsettings.json
+++ b/CabBookingWebApp/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Services": {
+    "BookingApi": "https://booking-service-xxxxx.a.run.app/api/booking",
+    "CustomerApi": "https://customer-service-xxxxx.a.run.app/api/customer",
+    "LocationApi": "https://location-service-xxxxx.a.run.app/api/location",
+    "PaymentApi": "https://payment-service-xxxxx.a.run.app/api/payment"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
