--- a/CabBookingWebApp/appsettings.json
+++ b/CabBookingWebApp/appsettings.json
@@ -3,7 +3,7 @@
     "BookingApi": "https://booking-service-xxxxx.a.run.app/api/booking",
     "CustomerApi": "https://customer-service-xxxxx.a.run.app/api/customer",
     "LocationApi": "https://location-service-xxxxx.a.run.app/api/location",
-    "PaymentApi": "https://payment-service-xxxxx.a.run.app/api/payment"
+    "PaymentApi": "https://payment-service-184591190691.europe-west1.run.app/api/payment"
   },
   "Logging": {
     "LogLevel": {
