feat: fixed all the dates

--- a/CabBookingWebApp/appsettings.json
+++ b/CabBookingWebApp/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Services": {
-    "BookingApi": "https://booking-service-xxxxx.a.run.app/api/booking",
-    "CustomerApi": "https://customer-service-xxxxx.a.run.app/api/customer",
-    "LocationApi": "https://location-service-xxxxx.a.run.app/api/location",
-    "PaymentApi": "https://payment-service-184591190691.europe-west1.run.app/api/payment"
+    "BookingApi": "https://localhost:7284/api/booking",
+    "CustomerApi": "https://localhost:7135/api/customer",
+    "LocationApi": "https://localhost:7157/api/location",
+    "PaymentApi": "https://localhost:7237/api/payment"
   },
   "Logging": {
     "LogLevel": {
